tests/fixtures/positive/code-style/ListInitializationMustBeMultiLine_MinItems3.cls
public class Example {
    public void method() {
        List<String> items = new List<String>{ 'item1', 'item2' };
    }
}

